--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Hello Engineers !!! Welcome to the world of DevOps</h1>
+<h1>Hello engineer !!! Welcome to the world of DevOps</h1>
 </body>
 </html>
